assets/styles/style.css
html {
  overflow-x: hidden;
  margin-left:-8px;
  margin-right: -8px;
}

hr {
  width: 50%;
  margin-bottom: 25px;
  color:#fff
}

.spacer {
  width:100%;
}

.zen-logo {
  height:200%;
  pointer-events: none;
  position: absolute;
  top: -60px;
  left: 50px;
}

.circle {
  background-color: #c18c6d;
  border-radius: 50%;
  height: 200px;
  width:200px;
  position: absolute;
  top: -50px;
  left: 85px;
}

.embed {
  padding-left: 5%;
  padding-right: 5%;
  display:flex;
  justify-content: center;
}

.noselect {
  -webkit-touch-callout: none; 
  -webkit-user-select: none; 
  -khtml-user-select: none; 
  -moz-user-select: none; 
  -ms-user-select: none; 
  user-select: none; 
}

.reservation-main-body {
  background-image: url("../../design_docs/images/ReservationPage.png");
  background-size: cover;
  background-repeat: no-repeat;
  height: 750px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin-top: 0px;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
}

#reservation-title {
  margin: 0px 0px 15px 0px;
  padding-top: 80px;
}

.reservation-box {
  height: 400px;
  width: 300px;
  background-color: #E6CCB2;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  margin-top: -20px;
}

.contact-info {
  display: flex;
  text-align: center;
  font-family: Oswald, Arial;
  margin-top: 10px;
  font-size: 20px;
  flex-direction: row;
  align-items: center;
  color: blac-k;
}
.name {
  display: flex;
  text-align: center;
  font-family: Oswald, Arial;
  font-size: 20px;
}
.name-icon {
  height: 20px;
  width: 23px;
  margin: 5px 6px 0px 17px;
}

.email {
  display: flex;
  text-align: center;
  font-family: Oswald, Arial;
  font-size: 20px;
}

.email-icon {
  height: 20px;
  width: 23px;
  margin-top: 15px;
  margin-left: 17px;
  margin-right: 6px;
}

.phone {
  display: flex;
  text-align: center;
  font-family: Oswald, Arial;
  font-size: 20px;
}

.phone-icon {
  height: 20px;
  width: 23px;
  margin-top: 15px;
  margin-left: 17px;
  margin-right: 6px;
}

.no-of-pax {
  display: flex;
  text-align: left;
  font-family: Oswald, Arial;
  font-size: 20px;
}
.no-of-pax-icon {
  height: 20px;
  width: 23px;
  margin-top: 15px;
  margin-left: 17px;
  margin-right: 6px;
}

.input-name {
  display: flex;
  justify-content: start;
  width: 185px;
  margin-right: 20px;
}

.input-text-name {
  font-family: Oswald, Arial;
  border-top: none;
  border-right: none;
  border-left: none; 
  background: #E6CCB2;
  width: 170px;
}

.input-email {
  display: flex;
  justify-content: start;
  width: 185px;
  margin-right: 20px;
}

.input-text-email {
  font-family: Oswald, Arial;
  border-top: none;
  border-right: none;
  border-left: none; 
  background: #E6CCB2;
  width: 170px;
}

.input-phone {
  display: flex;
  justify-content: end;
  width: 180px;
  margin-right: 20px;
}

.input-text-phone {
  font-family: Oswald, Arial;
  border-top: none;
  border-right: none;
  border-left: none; 
  background: #E6CCB2;
  width: 170px;
}

.input-pax {
  display: flex;
  justify-content: end;
  width: 150px;
  margin-right: 20px;
}

.input-text-pax {
  font-family: Oswald, Arial;
  border-top: none;
  border-right: none;
  border-left: none; 
  background: #E6CCB2;
  width: 140px;
}


.name-p {
  width: 100%;
  display: flex;
  opacity: 0.8;
}

.material-symbols-rounded {
  opacity: 0.5;
  margin-right: 20px;
  border-radius: 50%;
}

.material-symbols-rounded:hover{
  background-color: lightgrey;
}

.current-date{
  margin-left: 15px;
  margin-top: 30px;
  font-family: Oswald, Arial;
  font-size: 20px;
  opacity: 0.7;
}
.calendar ul{
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  text-align: center;
}
.table-header {
  display: flex;
  align-items: center;
}

.wrapper header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px 5px 5px;
  margin: 0px;
  height: 38px;
}

.icons {
  margin-top: 10px;
}
.icons span {
  cursor: pointer;
  text-align: center;
  line-height: 38px;
  border-radius: 50%;
}

.calendar {
  padding: 0px 10px 0px 10px;
  text-align: center;
  margin: 0px;
  font-family: Oswald, Arial, Helvetica, sans-serif;
}

.calendar ul li{
  width: calc(100% / 7);
  font-size: 13px;
  align-items: center;
}

.calendar ul.weeks {
  margin-bottom: 10px;
  padding: 0px;
  font-weight: bold;
  opacity: 0.8;
}

.days { 
  margin: 0px;
  padding: 0px;
}

.days li{
  padding-bottom: 2px;
  opacity: 0.7;
  cursor: pointer;
  font-size: 15px;
}

.days li:hover{
  background-color: lightgrey;
  border-radius: 50%;
}

.reserve-now {
  display: flex;
  text-align: center;
  justify-content: center;
  margin-top: 12px;
}

.reserve-now-button {
  display: flex;
  justify-content: center;
  color: #FFFFFF;
  text-align: center;
  font-size: 13px;
  font-family: Poppins;
  background-color: #B71A25;
  border-radius: 10px;
  border: none;
  width: 120px;
  height: 40px;
  align-items: center;
  cursor: pointer;
}

a {
  color: inherit; /*this will make anchors look like paragraphs, but with an underline*/
}

.test-blue {
    background-color: cornflowerblue;
}

.test-red {
  background-color: lightcoral;
}

.test-green {
  background-color: darkseagreen;
}

.test-purple {
  background-color:rgb(180, 159, 223);
}

.float-center {
  display: flex;
  justify-content: center;
}

#main-header {
  display: flex;
  width: 100%;
  background-color: rgb(221,184,146);
  position: fixed;
  margin-top: -8px;
  height: 120px;
  min-width: 1300px;
  z-index: 2;
}
  
.header-nav {
    margin-top: 45px;
    display: flex;
    min-width: 1000px;
}

.header-nav div {
  padding-left: 7.5%;
}

.header-nav a {
  font-family: Poppins, Arial, Helvetica, sans-serif;
  text-decoration: none;
}

.socmed-icon {
  height: 25px;
  position: absolute;
}

.facebook {
  padding-left: 3%;
}

.instagram {
  padding-left: 6%;
}

#logo {
    width: 20%;
    overflow:visible;
}

.image {
    width: 300px;
    height: 200px;
    margin-left: 1.5%;
    margin-right: 1.5%;
    margin-top: 1%;
    margin-bottom: 2%;

    position: relative;
    z-index: 1;
}

.image img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  object-position: center;
}

.image img:hover {
  transform: scale(1.2);
  transition: transform 0.3s ease;
}

.image img:not(:hover) {
  transform: scale(1);
  transition: transform 0.3s ease;
}

.image p.caption {
  text-align: center;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-size: 1.2em;
}

#nav {
    width: 80%;
}

.header {
    width: 100%;
    text-align: center;
    display:flex;
    justify-content: center;
    font-family: 'Savoye LET',Arial, Helvetica, sans-serif;
    line-height: 0px;
    font-size: 7em;
}

.header p {
  margin-top: 100px;
  margin-bottom: 50px;
}

#hero {
    padding-bottom: 1%;
    padding-top: 10%;
    min-height: 400px;
    background: #fff url(./../img/index/hero.jpeg) center/cover no-repeat;
    color:#fff;
}

#hero-logo {
    width: 100%;
    display: flex;
    justify-content: center;
}

#hero-logo img {
  height:250px;
}

#hero-text {
  justify-content: center;
  width: 100%;
}

#hero-text p {
  text-align: center;
  font-size: 1.2em;
  font-family: Poppins, Arial, Helvetica, sans-serif;
}

#hero-text i {
  text-align: center;
  font-size: 1.2em;
  font-family: Poppins, Arial, Helvetica, sans-serif;
}

#hero-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
}

#hero-buttons a {
  font-family: Poppins, Arial, Helvetica, sans-serif;
  margin: 25px 25px 25px 25px;
}

#loc-and-contact {
    display: inline-block;
    width: 100%;
}

.background-1 {
    padding-bottom: 50px;
    background: #fff url(./../img/index/background-1.jpg) center/cover no-repeat;
    color:#fff;
}

.background-2 {
    padding-bottom: 50px;
    background: #fff url(./../img/index/background-2.jpeg) center/cover no-repeat;
    color:#fff;
}

.float-left {
    float: left;
    width: 50%;
}

.float-right {
    float: right;
    width: 50%;
}

.text-header {
    font-weight: bold;
    font-size: 1.4em;
    font-family: Poppins, Arial, Helvetica, sans-serif;
}
.text-content {
    padding-left: 150px;
    font-family: Poppins, Arial, Helvetica, sans-serif;
}

#find-us iframe {
  padding-top:25px;
  padding-bottom: 50px;
}

#about-us-main {
  background-image: url("../../design_docs/images/about-us-page.png");
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin-top: 0px;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
  color: white;
  font-family: Poppins, Arial;
}

#about-us-title {
  margin-bottom: 5px;
  padding-top: 150px;
}

.section-title {
  color: white;
  font-size: 130px;
  margin-bottom: 5px;
  font-family: 'Savoye LET', Arial, Helvetica, sans-serif;
  opacity: 0.7;
}

.about-us-box {
  width: 870px;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}

.about-us-welcome {
  font-size: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 75px;
  text-align: center;
}

.about-us-headers {
  font-size: 30px;
  margin-bottom: 10px;
}

.about-us-content {
  font-size: 20px;
  margin-bottom: 37px;

}

p {
  text-align: justify;
}

.about-us-reserve-now-button {
  display: flex;
  justify-content: center;
  color: #FFFFFF;
  text-align: center;
  font-size: 20px;
  font-family: Poppins;
  background-color: #B71A25;
  border-radius: 20px;
  border: none;
  width: 180px;
  height: 60px;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
}


#footer {
  background-color: rgb(221,184,146);
  display:flex;
  justify-content: center;
  margin-bottom: -8px;
  margin-top: -4px;
  height:200px;
  min-width: 1200px;
}

#left-foot {
  padding-right: 200px;
}

#right-foot {
  padding-left: 150px;
}

.footer-text {
  list-style: none;
  text-align: center;
  padding-left: 0px;
  font-family: Poppins, Arial, Helvetica, sans-serif;
}

.footer-decoration-left {
  height:200px;
  position:absolute;
  left:-150px;
}

.footer-decoration-right {
  height:200px;
  position:absolute;
  right:-150px;
}
.footer-header {
  font-weight: bold;
  font-size: 1.4em;
  text-align: center;
  font-family: Poppins, Arial, Helvetica, sans-serif;
}

